...
  bool _menyimpanPengaturan = false;

  bool _aktif = false;
  String _mode = 'FULLSCREEN';
  String _animasi = 'FADE';
  final _durasiController = TextEditingController(text: '6');
  final _idleController = TextEditingController(text: '30');

  List<Map<String, dynamic>> _slide = [];

  @override
  void initState() {
    super.initState();
...
